# overlap4ocs

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CODEBASE_AUDIT.md  CODEBASE_AUDIT_ZH.md  LICENSE  README.md  README_ZH.md  baseline.py  batch_run_msg.bash  batch_run_msg.zsh  config.py  ideal.py  main.py  math_model.md  model.py  orchestrator.py  pyproject.toml  requirements.txt  scheduler_analysis.py
.github/workflows/: ci-pr-smoke.yml  repro-full.yml  repro-lite.yml
config/: __init__.py  cc_algorithm.py  instance.toml  instance_parser.py  program.toml  program_png.toml
config/matrix/: example_matrix.toml  example_matrix_sweep_msg+Tr-half.toml  example_matrix_sweep_msg+Tr.toml  example_matrix_sweep_msg+algo.toml  example_matrix_sweep_msg+k-B-240.toml  example_matrix_sweep_msg+k.toml  exp1.1-hd+bruck-2.toml  exp1.2-hd+bruck.toml  exp1.2-pair.toml  exp1.3-a2a_pair.toml  k4_m32_ar_hd_sweep_p_matrix.toml
docs/: exp1.3-a2a-time-limit-study.md  exp1.3-a2a-time-limit-summary.csv  math_model.md  reproducibility.md
docs/ai-agent-repro/: README.md  prompt.txt
notebook/: demo.plantuml  moti-example.drawio  overlap.ipynb  simulation_fig-us.ipynb
paradigm/: __init__.py  baseline.py  ideal.py  model_gurobi.py  model_pulp.py  one_shot.py  solver_wrapper.py  warm_start.py
scripts/: __init__.py  commands.zsh  generate_matrix_configs.py  matrix_archive.py  matrix_experiments.md  matrix_runner.py  prepare_simulation_data.py  simulation_fig.ipynb  simulation_fig.py
utils/: __init__.py  check_platform.py  scheduler_analysis.py
(+15 files in other folders)
